--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8">
 	<title> Леди баг и Супер кот 
 	</title>
-    <link rel="icon" type"image/png" href="домашняя страница/картинки/7.png"> 
-    <link href="домашняя страница/style1.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type"image/png" href="homepage/images/7.png"> 
+    <link href="homepage/style1.css" rel="stylesheet" type="text/css">
 		</head>
   <body class="phon" vlink="black" link="black">
  <div class="container">   
      <div class="head" align="center">
-     		<img class="img1" align="left" src="домашняя страница/картинки/9.png" width ="15%"></img><img class="img2" width="30% "src="домашняя страница/картинки/8.png" ></img><img align="right" class="img3" width="9%" src="домашняя страница/картинки/10.png"></img>
+     		<img class="img1" align="left" src="homepage/images/9.png" width ="15%"></img><img class="img2" width="30% "src="homepage/images/8.png" ></img><img align="right" class="img3" width="9%" src="homepage/images/10.png"></img>
      		
      		</div>
      		<div class="body" >
